# mbse-local-ai-demo

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
demo/: requirement.mmd
local-config/: CONFIG_EXAMPLES.md  Caddyfile  README.md  docker-compose.yaml  litellm_config.yaml  litellm_config_coding_focused.yaml  litellm_config_local_only.yaml  setup_local_ai.sh
mcp_server/: README.md  __init__.py  document_parser.py  pdf_processor.py  server.py  test_date_parsing.py  test_pdf_metadata.py
mcp_server/data/: mock_pyramid_knowledge_graph.py
mcp_server/tools/: __init__.py  compliance_tools.py  document_tools.py  pra_tools.py
mcp_server/utils/: document_parser.py  pdf_processor.py
